# nya-scope

./: .editorconfig  README.md  publish.sh  pyproject.toml
src/nya_scope/: __init__.py  _impl.py
tests/: test_access.py  test_instantiate_scope.py
