[project]
name = 'nya-scope'
dynamic = ['version']
description = 'Small helper library for creating named scopes/inline modules'
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# [project.scripts]
# nya_scope = "nya_scope.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/nya_scope/_version.py"
pattern = '__version__(?:: str)? *= *\"(?P<version>[^\"]+)\"'

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
